fix: order invoice list by sending date ASC or DESC